# py_summarize_it

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/py_summarize_it/: __init__.py
tests/: test_py_summarize_it.py
