[tool.poetry]
name = "py_summarize_it"
version = "0.1.0"
description = "A package to summarize information of a text file"
authors = ["Sopuruchi Chisom"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
